[hotfix] Removed accidental borders around solve times on mobile.

--- a/app/static/less/timer/common.less
+++ b/app/static/less/timer/common.less
@@ -198,7 +198,6 @@
 
 .single_time {
     text-align: center;
-    border: 1px solid white;
 
     &.ctx_menu {
         cursor: pointer;
