--- a/app/static/less/timer/desktop.less
+++ b/app/static/less/timer/desktop.less
@@ -86,6 +86,7 @@
 .single_time {
     padding: 5px;
     font-size: 18px;
+    border: 1px solid white;
 
     display: flex;
     align-items: center;
